--- a/src/projects.json
+++ b/src/projects.json
@@ -2,7 +2,7 @@
     {
         "id": 1,
         "title": "CO-VIRAL App",
-        "image": "/HomeMobileShort.PNG",
+        "image": "/CO-VIRALscreenshot.PNG",
         "alt": "virus image with text overlay",
         "text": "A group project to create a resource for reliable information during the COVID-19 pandemic.",
         "deployed": "https://robynp108.github.io/CO-VIRAL-Group-5/",
